# pre-trained-models-workshop

./: .dockerignore  .gitattributes  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  LICENSE  README.md  app.py  benchmark.py  benchmark_analysis.ipynb  docker-compose.yaml  dockerfile  model_sizes_benchmark2.csv  pyproject.toml  pytest.ini  rebase.sh  requirements-dev.txt  requirements.txt  transcribe.py
benchmarks/: __main__.py  benchmark_analysis.ipynb  utils.py  whisper_benchmark.py
benchmarks/examples/: 10-min-talk-reference.txt
benchmarks/results/: NVIDIA A40.csv  model_sizes_benchmark.csv  model_sizes_benchmark_razer.csv
benchmarks/results/whisper_benchmark/: NVIDIA GeForce RTX 3080 Ti Laptop GPU.csv
condensor/: __main__.py  app.py  condense.py  load_audio.py
condensor/static/: index.html
static/: index.html
tests/: mocks.py  test_app.py  test_benchmarks.py
